--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -14,6 +14,16 @@ jobs:
     - name: Clone repository
       uses: actions/checkout@v4
 
+    - name: Set up Docker
+      uses: docker/setup-buildx-action@v2
+      with:
+        version: 'v0.9.1'
+
+    - name: Install Docker Compose
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y docker-compose
+
     - name: Configure Python
       uses: actions/setup-python@v5
       with:
