--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -14,16 +14,6 @@ jobs:
     - name: Clone repository
       uses: actions/checkout@v4
 
-    - name: Set up Docker
-      uses: docker/setup-buildx-action@v2
-      with:
-        version: 'v0.9.1'
-
-    - name: Install Docker Compose
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y docker-compose
-
     - name: Configure Python
       uses: actions/setup-python@v5
       with:
@@ -33,6 +23,14 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+
+    - name: Install Docker Compose
+      run: |
+        # Install docker-compose as a standalone binary
+        sudo curl -L "https://github.com/docker/compose/releases/download/v2.29.2/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+        sudo chmod +x /usr/local/bin/docker-compose
+        # Verify installation
+        docker-compose --version
 
     - name: Build Docker containers
       run: docker-compose build
