--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -14,6 +14,24 @@ jobs:
     - name: Clone repository
       uses: actions/checkout@v4
 
+    - name: Set up Docker
+      uses: docker/setup-buildx-action@v2
+      with:
+        version: 'v0.9.1'
+
+    - name: Install Docker
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y docker.io
+        sudo systemctl enable --now docker
+        docker --version  # Verify Docker is installed
+
+    - name: Install Docker Compose
+      run: |
+        sudo curl -L "https://github.com/docker/compose/releases/download/v2.16.0/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+        sudo chmod +x /usr/local/bin/docker-compose
+        docker-compose --version  # Verify Docker Compose is installed
+
     - name: Configure Python
       uses: actions/setup-python@v5
       with:
@@ -23,14 +41,6 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-
-    - name: Install Docker Compose
-      run: |
-        # Install docker-compose as a standalone binary
-        sudo curl -L "https://github.com/docker/compose/releases/download/v2.29.2/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
-        sudo chmod +x /usr/local/bin/docker-compose
-        # Verify installation
-        docker-compose --version
 
     - name: Build Docker containers
       run: docker-compose build
