--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -60,13 +60,13 @@ jobs:
           push: true
           tags: kaw393939/devops_demo:${{ github.sha }} # Uses the Git SHA for tagging
           platforms: linux/amd64,linux/arm64 # Multi-platform support
-          cache-from: type=registry,ref=kaw393939/devops_demo:cache
+          cache-from: type=registry,ref=yeomigie098/devops_demo:cache
           cache-to: type=inline,mode=max
           
       - name: Scan the Docker image
         uses: aquasecurity/trivy-action@master
         with:
-          image-ref: 'kaw393939/devops_demo:${{ github.sha }}'
+          image-ref: 'yeomigie098/devops_demo:${{ github.sha }}'
           format: 'table'
           exit-code: '1' # Fail the job if vulnerabilities are found
           ignore-unfixed: true
