--- a/requirements.txt
+++ b/requirements.txt
@@ -33,7 +33,7 @@ qrcode==7.4.2
 rsa==4.9
 six==1.16.0
 sniffio==1.3.1
-starlette==0.40.0
+starlette==0.37.4  # Downgraded to fix dependency issue with FastAPI
 tomli==2.0.1
 typing_extensions==4.10.0
 uvicorn==0.29.0
