--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,40 @@
+aiofiles
+annotated-types
+anyio
+bcrypt
+certifi
+cffi
+click
+cryptography
+ecdsa
+exceptiongroup
 fastapi
+gunicorn
+h11
+httpcore
 httpx
-uvicorn[standard]
+idna
+iniconfig
+packaging
+passlib
+pluggy
+pyasn1
+pycparser
 pydantic
-validators
-python-jose
+pydantic_core
+pypng
 pytest
+pytest-asyncio
+pytest-mock
+python-dotenv
+python-jose
+python-multipart
+qrcode
+rsa
+six
+sniffio
+starlette
+tomli
+typing_extensions
+uvicorn
+validators
