--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -35,6 +35,9 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
           
+      - name: Set environment variable to suppress Trivy vulnerability notices
+        run: echo "TRIVY_DISABLE_VEX_NOTICE=true" >> $GITHUB_ENV
+          
       - name: Run tests with Pytest
         run: pytest
 
